# french58

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  entity_layout.txt  env.sh  notes.md  raw_component_layout.txt  test.lua  test.txt  test_result
Engine/: CMakeLists.txt  engine_assembly.cpp  engine_placeholder.cpp  game_loop.cpp  module_assembly.cpp
Engine/BuildComponent/: CMakeLists.txt  application.cpp
Engine/EngineCore/: CMakeLists.txt
Engine/EngineCore/AssetManagement/: asset_manager.cpp  asset_manager.h  byte_stream.cpp  byte_stream.h
Engine/EngineCore/Configuration/: compile_time_flags.h
Engine/EngineCore/DependencyInjection/: buildtime_services.h  configuration_provider.h  runtime_services.h  service_provider.h
Engine/EngineCore/EntityModel/: README.md  component_tree.cpp  component_tree.h  entity_manager.cpp  entity_manager.h  transform.h
Engine/EngineCore/ErrorHandling/: exceptions.h
Engine/EngineCore/Hosting/: engine_host.cpp
Engine/EngineCore/Logging/: logger_service.h
Engine/EngineCore/Memory/: README.md  bp_tree.cpp  bp_tree.h  bucket_allocator.h  budget_allocator.h  cache_friendly_allocator.h  cache_line_allocator.h  high_integrity_allocator.cpp  high_integrity_allocator.h  homogeneous_storage.cpp  homogeneous_storage.h  programmable_configs.h
Engine/EngineCore/Memory/FreeList/: bucket_allocator.h
Engine/EngineCore/Memory/FreeLists/: bucket_allocator.h  compact_allocator.h
Engine/EngineCore/Modularization/: module_manager.cpp
Engine/EngineCore/Pipeline/: README.md  asset_definition.h  asset_pipeline.h  component_pipeline.h  component_reflection.h  engine_assembly.h  file_access_service.cpp  file_access_service.h  module_definition.h  unified_id_service.h
Engine/EngineCore/Pipeline/Scripting/: named_property.h  variant.h
Engine/EngineCore/Platform/: platform_access.cpp  platform_access.h
Engine/EngineCore/Rendering/: renderer_data.h  renderer_service.cpp  renderer_service.h
Engine/EngineCore/Utils/: shorthand_functions.h  string_hashing.cpp  string_hashing.h
Engine/EngineCore/include/EngineCore/AssetManagement/: asset_header.h  asset_loading_context.h  asset_manager.h  async_io_event.h  loaded_asset.h
Engine/EngineCore/include/EngineCore/Configuration/: compile_time_flags.h  configuration_provider.h
Engine/EngineCore/include/EngineCore/Containers/: README.md  container_allocation_strategy.h
Engine/EngineCore/include/EngineCore/DependencyInjection/: buildtime_services.h  runtime_services.h
Engine/EngineCore/include/EngineCore/Ecs/: README.md  entity.h
Engine/EngineCore/include/EngineCore/Logging/: log_data.h  logger.h  logger_service.h
Engine/EngineCore/include/EngineCore/Pipeline/: asset_definition.h  asset_enumerable.h  asset_pipeline.h  component_definition.h  component_pipeline.h  engine_assembly.h  engine_callback.h  file_access_service.h  fwd.h  hash_id.h  (+6 more)
Engine/EngineCore/src/: asset_enumerable.cpp  asset_manager.cpp  camera_component.cpp  event_manager.cpp  event_stream.cpp  event_writer.cpp  file_access_service.cpp  game_loop.cpp  graphics_layer.cpp  index_queue.cpp  input_manager.cpp  logger.cpp  logger_service.cpp  memory_manager.cpp  module_manager.cpp  module_thread_worker.cpp  network_layer.cpp  platform_access.cpp  renderer_service.cpp  root_module.cpp  spatial_component.cpp  task_manager.cpp  transient_allocator.cpp  variant.cpp  world_state.cpp
Engine/EngineCore/src/Rendering/: common.h  gpu_resource.cpp  render_context.cpp  render_target.cpp  render_thread.cpp  transfer_manager.cpp
Engine/EngineUtils/: CMakeLists.txt
Engine/EngineUtils/ErrorHandling/: exceptions.h
Engine/EngineUtils/Memory/: in_place_read_stream.cpp  programmable_configs.h
Engine/EngineUtils/Memory/FreeList/: bucket_allocator.h  compact_allocator.h
Engine/EngineUtils/src/: hex_strings.cpp  in_place_read_stream.cpp  unmanaged_stack_allocator.cpp
Engine/ExampleGameplayModule/: CMakeLists.txt
Engine/ExampleGameplayModule/include/ExampleGameplayModule/: auto_rotate_marker.h  example_gameplay_module.h
Engine/ExampleGameplayModule/src/: auto_rotate_marker.cpp  example_gameplay_module.cpp
Engine/InputModule/: CMakeLists.txt
Engine/InputModule/include/InputModule/: input_action_type.h  input_component_type.h  input_module.h
Engine/InputModule/src/: input_action.cpp  input_module.cpp
Engine/LiveLinkModule/: CMakeLists.txt
Engine/LiveLinkModule/include/LiveLinkModule/: live_link_module.h  live_link_module_state.h  live_link_session.h
Engine/LiveLinkModule/src/: live_link_module.cpp  live_link_session.cpp  sample.cpp
Engine/LuaScriptingModule/: CMakeLists.txt  README.md
Engine/LuaScriptingModule/include/LuaScriptingModule/: api.h  lua_api_builder.h  lua_data_accesses.h  lua_executor.h  lua_param_enumerator.h  lua_return_writer.h  lua_runner.h  lua_scripting_module.h  state_data.h
Engine/LuaScriptingModule/src/: api.cpp  lua_api_builder.cpp  lua_data_accesses.cpp  lua_executor.cpp  lua_interpreter.cpp  lua_param_enumerator.cpp  lua_return_writer.cpp  lua_runner.cpp  lua_script.cpp  lua_scripting_module.cpp  script_node.cpp
Engine/OrcaRendererModule/: CMakeLists.txt
Engine/OrcaRendererModule/include/OrcaRendererModule/: orca_renderer_module.h  utils.h
Engine/OrcaRendererModule/src/: module_definition.cpp  orca_renderer_module.cpp
Engine/OrcaRendererModule/src/Assets/: material.cpp  mesh.cpp  shader.cpp  shader_effect.cpp
Engine/OrcaRendererModule/src/Runtime/: render_context.cpp  renderer.cpp  renderer_resource.cpp
Engine/RendererModule/: CMakeLists.txt  pch.h  renderer_module.cpp  renderer_module.h
Engine/RendererModule/Assets/: material.cpp  material.h  mesh.cpp  mesh.h  shader.cpp  shader.h
Engine/RendererModule/Tools/MaterialEditor/: MaterialEditor.sln
Engine/RendererModule/include/RendererModule/: common.h  configurations.h  renderer_module.h
Engine/RendererModule/src/: directional_light.cpp  fragment_shader.cpp  material.cpp  mesh.cpp  mesh_builder.cpp  mesh_renderer.cpp  render_pipeline.cpp  renderer_module.cpp  shader.cpp  vertex_shader.cpp
Engine/Tests/: app.cpp
(+286 files in other folders)
